# spice-to-ibis

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/spice_to_ibis/: __init__.py  cli.py  converter.py  measparser.py  parser.py  runner.py  syntax.py  writer.py
src/spice_to_ibis/deckgen/: __init__.py  base.py  dc_sweep.py  transient.py
src/spice_to_ibis/models/: __init__.py  corners.py  ibis.py  spice.py
tests/: test_cli.py  test_converter.py  test_deckgen.py  test_measparser.py  test_models.py  test_parser.py  test_runner.py  test_syntax.py  test_writer.py
tests/fixtures/: buf_io.cir  buf_io.scs  lvds_driver.cir  lvds_driver.scs  ngspice_dc.raw  ngspice_tran.raw  sample.mt0  sample_dc.txt  sample_tran.txt  simple.scs
tests/fixtures/models/: nmos.cir  pmos.cir
