[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spice-to-ibis"
version = "0.1.0"
description = "Generate IBIS models from SPICE subcircuit characterization"
requires-python = ">=3.14"
license = "MIT"
dependencies = []

[project.scripts]
spice-to-ibis = "spice_to_ibis.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = [
    "ty>=0.0.20",
]
